# stm_cast_raspi

./: .gitattributes  .gitignore  main.py  pyproject.toml  run_api.py  sol.py
api/: __init__.py  requests.py
data/: Weather_API_Data_202511102036.csv  Weatherstation_STMCAST_Data_202511102036.csv
src/: controller.py  deep_learning.py  linear_corrector.py  loader.py  pipeline.py
ui/: __init__.py
ui/components/: backend_status.py  file_browser.py  header.py  metric_card.py  sidebar.py
ui/config/: state.py  styles.py
ui/pages/: dashboard.py  data_upload.py  linear_corrector.py  neuronal_network.py  results.py  settings.py
utils/: data_processor.py  i2c.py  plotter.py
